<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">KaraokeHug</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="spinner_title">Select Category</string>
    <string name="empty_string">-</string>
    <string name="ensong_string">English</string>
    <string name="vnsong_string">Việt Nam</string>
    <string name="allsong_string">All Song</string>
    <string name="search_string">Search</string>
    <string name="favourite_string">Favourites</string>
    <string name="song_string">Song</string>
    <string name="search_label">ID, name, lyric</string>
    <string name="song_name_label">Name</string>
    <string name="lyric_label">Lyric</string>
    <string name="author_label">Author</string>
    <string name="source_label">Source</string>
    <string name="favourite_label">Favourite</string>
    <string name="song_id_label">#</string>
    <string name="quick_search_label">Quick search</string>
    <string name="back_label">Back</string>
    <string name="select_languagesong">Select music</string>
    <string name="categories_device">categories device</string>
    <string name="check_song">Can\'t find any song</string>
    <string name="no_data">Data not found</string>
    <string name="media">Choose media player</string>
    <string name="closeapp">Closing KaraokeHug app</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="closing ">Are you sure you want to close KaraokeHug app?</string>
    <string name="rate">Rate this app</string>
    <string name="search_by_alphabet">Search by alphabet</string>
    <string name="select_model">You are selecting</string>
    <string name="choose">You are not choose any media player</string>
	<string name="play_karaoke">Play karaoke song</string>
	<string name="karaoke">Karaoke</string>
</resources>